--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-zeelog-2020-09-10"
+CONFIG_LOCALVERSION="-zeelog-2020-09-13"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -2227,6 +2227,7 @@ CONFIG_SMB135X_CHARGER=y
 # CONFIG_QPNP_CHARGER is not set
 CONFIG_QPNP_SMBCHARGER=y
 # CONFIG_QPNP_SMB2 is not set
+CONFIG_QPNP_LEGACY_CYCLE_COUNT=y
 # CONFIG_FUELGAUGE_STC3117 is not set
 CONFIG_QPNP_FG=y
 # CONFIG_QPNP_FG_GEN3 is not set
